[gd_scene load_steps=24 format=3 uid="uid://djfc1gxr06khg"]

[ext_resource type="Script" path="res://game_logic/dock/arena/Arena.gd" id="1_s6y5m"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Rhythm.gd" id="2_63u43"]
[ext_resource type="Resource" uid="uid://catfs40guu8d3" path="res://wave/sample_wave.tres" id="2_kf3wb"]
[ext_resource type="Theme" uid="uid://rglalewkhbya" path="res://theme/main_menu.tres" id="2_rlpo2"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Debug.gd" id="3_5a4i5"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Turn.gd" id="3_fi2f4"]
[ext_resource type="Resource" uid="uid://c6e1674pgwokk" path="res://game_logic/dock/sample_character_data.tres" id="3_oyfeg"]
[ext_resource type="AudioStream" uid="uid://de6mc5m3m031q" path="res://assets/music/sample_music.ogg" id="4_hifyk"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Four_Beat_Helper.gd" id="5_253hl"]
[ext_resource type="PackedScene" uid="uid://ityamiduu6tq" path="res://game_logic/dock/arena/gui/character/character_gui.tscn" id="5_l5j0i"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Input.gd" id="6_s8oj5"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Deck.gd" id="6_vpb7p"]
[ext_resource type="PackedScene" uid="uid://dwtw21s0va41k" path="res://game_logic/dock/arena/gui/energy/energy_gui.tscn" id="6_xko6c"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Enemies.gd" id="7_1av5v"]
[ext_resource type="PackedScene" uid="uid://cqwfm8sp0l62y" path="res://game_logic/dock/arena/gui/beatbar/beatbar_gui.tscn" id="8_xjhsb"]
[ext_resource type="Script" path="res://game_logic/dock/arena/Character.gd" id="11_e2b3r"]
[ext_resource type="PackedScene" uid="uid://hlyp78pg6n11" path="res://game_logic/dock/arena/gui/enemies/enemies_gui.tscn" id="12_86ru6"]
[ext_resource type="PackedScene" uid="uid://b8ixh87g4u0dv" path="res://game_logic/dock/arena/gui/deck/Deck_GUI.tscn" id="12_s1t7s"]
[ext_resource type="PackedScene" uid="uid://bwytxbwbc1fo7" path="res://game_logic/dock/arena/gui/audio_visualizer/audio_visualizer.tscn" id="17_vwlco"]
[ext_resource type="Texture2D" uid="uid://dn1wxkpwpiovd" path="res://assets/bg/Background.png" id="18_emlm5"]
[ext_resource type="Texture2D" uid="uid://djlus2wqq2naw" path="res://assets/bg/[64x64] Dungeon Bricks Plain.png" id="19_l2s01"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_87wg3"]
texture = ExtResource("19_l2s01")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
30:23/0 = 0
31:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
30:24/0 = 0
31:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
29:25/0 = 0
30:25/0 = 0
31:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
30:26/0 = 0
31:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
21:27/0 = 0
22:27/0 = 0
23:27/0 = 0
24:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
28:27/0 = 0
29:27/0 = 0
30:27/0 = 0
31:27/0 = 0

[sub_resource type="TileSet" id="TileSet_bxdlw"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_87wg3")

[node name="Arena" type="Node2D"]
process_mode = 1
script = ExtResource("1_s6y5m")
debug_wave_data = ExtResource("2_kf3wb")
debug_character_data = ExtResource("3_oyfeg")
metadata/_edit_lock_ = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_hifyk")
volume_db = -5.0
bus = &"BGM"

[node name="SFX_beat_ticks" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -5.0
bus = &"SFX"

[node name="Logic" type="Node" parent="."]
editor_description = "Capsule node for all logic parts
Script shouldn't be attached to this node"

[node name="Turn" type="Node" parent="Logic"]
unique_name_in_owner = true
editor_description = "Handles Turn based operations"
script = ExtResource("3_fi2f4")

[node name="Rhythm" type="Node" parent="Logic"]
unique_name_in_owner = true
editor_description = "Handles Rhythm based calculation
If input timeout, calls %Turn for automatic turn"
script = ExtResource("2_63u43")

[node name="Four_Beat_Helper" type="Node" parent="Logic/Rhythm"]
script = ExtResource("5_253hl")

[node name="Deck" type="Node" parent="Logic"]
unique_name_in_owner = true
script = ExtResource("6_vpb7p")

[node name="Input" type="Node" parent="Logic"]
unique_name_in_owner = true
process_mode = 3
editor_description = "Handles rhythm based input"
script = ExtResource("6_s8oj5")

[node name="Enemies" type="Node" parent="Logic"]
unique_name_in_owner = true
script = ExtResource("7_1av5v")

[node name="Character" type="Node" parent="Logic"]
unique_name_in_owner = true
script = ExtResource("11_e2b3r")

[node name="GUI" type="Control" parent="."]
editor_description = "Group of Rendering nodes.
These node should not contain any variable data in game, except render options."
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
metadata/_edit_lock_ = true

[node name="AudioVisualizer" parent="GUI" instance=ExtResource("17_vwlco")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(0, 1080)

[node name="Character_GUI" parent="GUI" instance=ExtResource("5_l5j0i")]
unique_name_in_owner = true
position = Vector2(384, 320)

[node name="Enemies_GUI" parent="GUI" instance=ExtResource("12_86ru6")]
unique_name_in_owner = true
position = Vector2(1088, 448)

[node name="Energy_GUI" parent="GUI" instance=ExtResource("6_xko6c")]
unique_name_in_owner = true
position = Vector2(192, 728)

[node name="BeatBar_GUI" parent="GUI" instance=ExtResource("8_xjhsb")]
unique_name_in_owner = true
editor_description = "Renders Beatbar GUI"
position = Vector2(1024, 640)

[node name="Deck_GUI" parent="GUI" instance=ExtResource("12_s1t7s")]
unique_name_in_owner = true
position = Vector2(384, 768)
scale = Vector2(0.9, 0.9)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="GUI"]
z_index = -100
position = Vector2(966, -226)
scale = Vector2(2.3, 2.3)
texture = ExtResource("18_emlm5")

[node name="TileMap" type="TileMap" parent="GUI"]
modulate = Color(0.235294, 1, 1, 1)
z_index = -99
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_bxdlw")
format = 2
layer_0/tile_data = PackedInt32Array(327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 65536, 0, 327685, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 65536, 0, 327689, 65536, 0, 327690, 65536, 0, 327691, 65536, 0, 327692, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 393229, 65536, 1, 393230, 0, 5, 393231, 131072, 5, 393226, 65536, 1, 393227, 65536, 1, 393228, 65536, 1, 393223, 65536, 1, 393224, 65536, 1, 393225, 65536, 1, 393221, 65536, 1, 393222, 65536, 1, 393218, 65536, 1, 393219, 65536, 1, 393220, 65536, 1, 458751, 65536, 1, 393216, 0, 5, 393217, 65536, 5, 393215, 65536, 0, 524287, 0, 5, 458752, 65536, 5, 458753, 65536, 1, 589823, 65536, 1, 524288, 65536, 1, 524289, 65536, 1, 524290, 65536, 1, 524291, 0, 5, 524292, 65536, 5, 458755, 65536, 1, 458756, 65536, 1, 458757, 65536, 1, 458754, 65536, 1, 524293, 65536, 1, 524294, 65536, 1, 524295, 65536, 1, 524296, 65536, 1, 458758, 65536, 1, 458759, 65536, 1, 458760, 65536, 1, 458761, 65536, 1, 458762, 65536, 1, 524298, 65536, 1, 524299, 65536, 1, 524300, 65536, 1, 524297, 65536, 1, 458763, 65536, 1, 458764, 65536, 1, 458765, 65536, 1, 458766, 65536, 1, 458767, 65536, 1, 524301, 65536, 1, 524302, 0, 5, 524303, 131072, 5)

[node name="Debug" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 101
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme = ExtResource("2_rlpo2")
script = ExtResource("3_5a4i5")
metadata/_edit_lock_ = true

[node name="Win" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 128.0
text = "Win"

[node name="Lose" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 64.0
offset_top = 152.0
offset_right = 448.0
offset_bottom = 216.0
text = "Lose"

[node name="ReturnToMain" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 448.0
offset_bottom = 320.0
text = "Return to Main"

[node name="StartMusic" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 576.0
offset_top = 64.0
offset_right = 960.0
offset_bottom = 128.0
toggle_mode = true
text = "Start Music"

[node name="Label_Turn" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1024.0
offset_top = 64.0
offset_right = 1472.0
offset_bottom = 312.0
text = "curr_turn : "
horizontal_alignment = 1

[node name="Label_Precision" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 1536.0
offset_top = 64.0
offset_right = 1920.0
offset_bottom = 312.0
text = "precision:
"
horizontal_alignment = 1

[node name="Nothing" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 576.0
offset_top = 152.0
offset_right = 960.0
offset_bottom = 216.0
text = "nothing :)"

[node name="ExpireCount" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 88.0
offset_top = 560.0
offset_right = 155.0
offset_bottom = 654.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Debug/Win" to="Debug" method="_on_win_pressed"]
[connection signal="pressed" from="Debug/Lose" to="Debug" method="_on_lose_pressed"]
[connection signal="pressed" from="Debug/ReturnToMain" to="Debug" method="_on_return_to_main_pressed"]
[connection signal="toggled" from="Debug/StartMusic" to="Logic/Rhythm" method="_on_start_music_toggled"]
